@@ -1,3 +1,4 @@
+<!-- OBSOLETE, we're using data attributes now -->
 <a href="{% url lizard_map_workspace_item_edit %}" class="url-lizard-map-workspace-item-edit"></a>
 <a href="{% url lizard_map_workspace_item_reorder %}" class="url-lizard-map-workspace-item-reorder"></a>
 <a href="{% url lizard_map_workspace_item_add %}" class="url-lizard-map-workspace-item-add"></a>
